// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayMessage renders a success message 1`] = `
<div
  className="ui olive message"
>
  <p>
    Successful request
  </p>
</div>
`;

exports[`DisplayMessage renders an error message 1`] = `
<div
  className="ui red message"
>
  <p>
    Error request
  </p>
</div>
`;
